# WssDynamicStop

./: CMakeLists.txt  README.md  dashboard.html
config/: finnhub_api_key.txt  stock_list.json
include/: constants.hpp  custom_json_parser.hpp  custom_ui_server.hpp  finnhub_conn_client.hpp  retrieve_metadata.hpp
src/: main.cpp
